# AI-Apps-Collection

./: .gitignore  README.md
00 - AIConceptDoc/: 01-BasicConcepts.md  03-AIOps.md  04-Agent.md  05-LocalLLM.md  06-RAG.md
01 - AIBasicPracProject/01 - FirstGenAIProject - GenerateDockerFile/: README.md
02 - AzureAIService/01 - SpeechTextConversionService/speech-demo-tts-be/: README.md  index.js  package.json
02 - AzureAIService/01 - SpeechTextConversionService/speech-demo-tts-fe/: README.md  package.json
02 - AzureAIService/01 - SpeechTextConversionService/speech-demo-tts-fe/src/: App.css  App.js  SimpleTextToSpeech.jsx  SpeechToTextWithMSSdk.jsx  UploadAndTrans.jsx  custom.css  token_util.js
02 - AzureAIService/01 - SpeechTextConversionService/speech-demo-tts-simple/: README.md  package.json
02 - AzureAIService/01 - SpeechTextConversionService/speech-demo-tts-simple/src/: App.js  SpeechToTextWithMSSdk.jsx
03 - AgentProject/01 - BasicAgentWIthCrewAI/my_cewai_agent_project/: README.md  pyproject.toml
03 - AgentProject/01 - BasicAgentWIthCrewAI/my_cewai_agent_project/src/my_cewai_agent_project/: crew.py  main.py
04 - RAG/01 - Medical AI Assistant/: README.md
04 - RAG/01 - Medical AI Assistant/client/: app.py
04 - RAG/01 - Medical AI Assistant/client/utils/: api.py
04 - RAG/01 - Medical AI Assistant/server/: main.py
05 - LLMEngineering/00 - Notes/: 00 - commands.md  01 - websites.md
05 - LLMEngineering/01 - LLM_Scratch/: .gitignore
05 - LLMEngineering/01 - LLM_Scratch/01 - Concept_Model_Transfer/: D1_SummaryWebsite.ipynb  day1.ipynb
(+2 files in other folders)
