[project]
name = "my_cewai_agent_project"
version = "0.1.0"
description = "my-cewai-agent-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
my_cewai_agent_project = "my_cewai_agent_project.main:run"
run_crew = "my_cewai_agent_project.main:run"
train = "my_cewai_agent_project.main:train"
replay = "my_cewai_agent_project.main:replay"
test = "my_cewai_agent_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
